# Strand-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
CMake/: FetchLibraries.cmake  SetApi.cmake  (+2 more)
Source/Runtime/: CMakeLists.txt  main.cpp
Source/Runtime/Core/: Core.cpp  Core.h
Source/Runtime/D3D11/Buffer/: D3D11BufferUtils.h  D3D11GraphicsBuffer.cpp  D3D11GraphicsBuffer.h
Source/Runtime/D3D11/Command/: D3D11CommandBuffer.cpp  D3D11CommandBuffer.h
Source/Runtime/D3D11/Device/: D3D11Device.cpp  D3D11Device.h
Source/Runtime/D3D11/Pipeline/: D3D11Pipeline.cpp  D3D11Pipeline.h  D3D11PipelineUtils.h
Source/Runtime/D3D11/ResourceLayout/: D3D11ResourceLayout.cpp  D3D11ResourceLayout.h
Source/Runtime/D3D11/Sampler/: D3D11Sampler.cpp  D3D11Sampler.h  D3D11SamplerUtils.h
Source/Runtime/D3D11/Shader/: D3D11Shader.cpp  D3D11Shader.h
Source/Runtime/D3D11/Swapchain/: D3D11Swapchain.cpp  D3D11Swapchain.h
Source/Runtime/D3D11/Texture/: D3D11Texture.cpp  D3D11Texture.h  D3D11TextureUtils.h  D3D11TextureView.cpp  D3D11TextureView.h
Source/Runtime/HAL/Buffer/: BufferCPUAccess.h  BufferUsage.h  GraphicsBuffer.h  GraphicsBufferDesc.h  ResourceUsage.h
Source/Runtime/HAL/Command/: CommandBuffer.h
Source/Runtime/HAL/Device/: GraphicsAPI.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceDesc.h  GraphicsDeviceObject.h  GraphicsDeviceObjectType.h
Source/Runtime/HAL/Manager/: GraphicsManager.h
Source/Runtime/HAL/Pipeline/: GraphicsPipelineDesc.h  Pipeline.h
Source/Runtime/HAL/ResourceLayout/: ResourceLayout.h  ResourceLayoutDesc.h
Source/Runtime/HAL/Sampler/: AddressMode.h  Sampler.h  SamplerComparison.h  SamplerDesc.h  SamplerFilter.h
Source/Runtime/HAL/Shader/: Shader.h  ShaderDesc.h  ShaderStage.h  ShaderType.h
Source/Runtime/HAL/Swapchain/: PresentMode.h  SampleCount.h  Swapchain.h  SwapchainDesc.h
Source/Runtime/HAL/Texture/: Texture.h  TextureDesc.h  TextureFormat.h  TextureResult.h  TextureType.h  TextureUsage.h  TextureUtils.h  TextureView.h  TextureViewDesc.h
Source/Runtime/Input/: InputManager.h  InputSystem.cpp  InputSystem.h  KeyboardInput.h
Source/Runtime/Manager/: ManagerAPI.h
Source/Runtime/Resource/Camera/: Camera.h  CameraManager.h  CameraType.h  FreeLookCamera.cpp  FreeLookCamera.h
Source/Runtime/Resource/Game/: GameObject.h  LightObject.h
Source/Runtime/Resource/Material/: Material.h
Source/Runtime/Resource/Mesh/: Mesh.cpp  Mesh.h
Source/Runtime/Resource/MeshLoader/: MeshLoader.cpp  MeshLoader.h
Source/Runtime/Resource/ShaderLoader/: ShaderLoader.cpp  ShaderLoader.h
Source/Runtime/TestObjects/: DamagedHelmet.cpp  DamagedHelmet.h
Source/Runtime/Window/: Window.cpp  Window.h  WindowDesc.h  WindowManager.h  WindowMode.h
Source/Runtime/World/: Transform.h
Strand-Editor/: CMakeLists.txt  main.cpp
Strand-Editor/Editor/: Editor.cpp  Editor.hpp  EditorManager.cpp  EditorManager.hpp
Strand-Editor/Renderer/: ImguiRenderModule.cpp  ImguiRenderModule.hpp  ImguiTexture.cpp  ImguiTexture.hpp
Strand-Engine/: CMakeLists.txt  main.cpp
Strand-Engine/Application/: Application.cpp  Application.hpp  ApplicationModule.cpp  ApplicationModule.hpp
Strand-Engine/Assert/: Assert.hpp
Strand-Engine/Common/: Common.hpp  Log.hpp  Singleton.hpp
Strand-Engine/Containers/: ArrayList.hpp  Common.hpp  Math.hpp  Memory.hpp  String.hpp
Strand-Engine/EntitySystem/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Scene.cpp  Scene.hpp
Strand-Engine/Event/: EventListener.cpp  EventListener.hpp
Strand-Engine/FileReader/: ConfigReader.hpp  FileReader.hpp
Strand-Engine/GameTimer/: GameTimer.cpp  GameTimer.hpp
Strand-Engine/Graphics/Command/: CommandList.cpp  CommandList.hpp
Strand-Engine/Graphics/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp  FramebufferDesc.hpp
Strand-Engine/Graphics/GraphicsDevice/: DeviceObject.cpp  DeviceObject.hpp  DeviceObjectDesc.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp
Strand-Engine/Graphics/Manager/: GraphicsManager.cpp  GraphicsManager.hpp
Strand-Engine/Graphics/Pipeline/: Pipeline.cpp  Pipeline.hpp  PipelineDesc.hpp  PipelineResourceLayout.hpp  ShaderStage.hpp
Strand-Engine/Graphics/Resources/: ResourceUtils.hpp
Strand-Engine/Graphics/Shader/: Shader.cpp  Shader.hpp  ShaderDesc.hpp
Strand-Engine/Graphics/Swapchain/: Swapchain.cpp  Swapchain.hpp  SwapchainDesc.hpp
Strand-Engine/Graphics/Utils/: DxgiUtils.hpp
Strand-Engine/JobSystem/: JobDispatchArgs.hpp  JobSystem.cpp  JobSystem.hpp  ThreadSafeStack.hpp
Strand-Engine/RHI/Command/: Command.cpp  Command.hpp
Strand-Engine/RHI/Common/: DeviceObjectType.hpp  FaceCullMode.hpp  FaceDirection.hpp  GraphicsApi.hpp  MeshMode.hpp  PrimitiveMode.hpp  TextureFormat.hpp
Strand-Engine/RHI/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp  FramebufferDesc.hpp
Strand-Engine/RHI/GraphicsDevice/: DeviceObject.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsDeviceDesc.hpp
Strand-Engine/RHI/Pipeline/: GraphicsPipelineDesc.hpp  Pipeline.hpp
Strand-Engine/RHI/Shader/: Shader.cpp  Shader.hpp  ShaderDesc.hpp
Strand-Engine/RHI/Swapchain/: Swapchain.cpp  Swapchain.hpp  SwapchainDesc.hpp
Strand-Engine/Resources/Material/: Material.cpp  Material.hpp  MaterialDesc.hpp
Strand-Engine/Resources/Mesh/: Mesh.cpp  Mesh.hpp  MeshDesc.hpp
Strand-Engine/Resources/MeshImporter/: MeshImporter.cpp
Strand-Engine/Resources/MeshLoader/: MeshImporter.cpp  MeshImporter.hpp  MeshLoader.cpp  MeshLoader.hpp
Strand-Engine/Resources/ResourceImporter/: ResourceImporter.cpp  ResourceImporter.hpp
Strand-Engine/Resources/Texture/: Texture.cpp  Texture.hpp  TextureDesc.hpp
Strand-Engine/Resources/Vertex/: Vertex.cpp  Vertex.hpp  VertexDesc.hpp
Strand-Engine/Window/: Window.cpp  Window.hpp  WindowDesc.hpp
Strand-Engine/Window/Manager/: WindowManager.cpp  WindowManager.hpp
Strand-Std/: CMakeLists.txt  main.cpp
Strand-Std/CMake/: StdExport.cmake
Strand-Std/Includes/: ArrayList.hpp  Core.hpp  Iterator.hpp  Memory.hpp  OwnedHeap.hpp  Singleton.hpp  String.hpp  WindowsOS.hpp
Strand-Std/Sources/: String.cpp
(+55 files in other folders)
